--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
     "firebase": "^12.9.0",
+    "firebase-admin": "^13.6.1",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "stripe": "^20.3.1",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
