--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "stripe": "^20.3.1",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/web-push": "^3.6.4",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "typescript": "^5"
